update html file

--- a/index.html
+++ b/index.html
@@ -18,26 +18,31 @@
 </head>
 <body>
    <div class="container">
+     <div class="img-mobile">
+       <img src="/images/image-mobile.png" alt="">
+     </div>
      <div class="text-container">
-       <h1>Get <span> insights</span> that help <br> your business grow.</h1>
+       <h1>Get <span> insights</span> that help your business <span class="grow">grow.</span></h1>
        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
         <div class="stats-container">
           <div class="stat">
             <h2>10k+</h2>
-            <p>companies</p>
+            <span>companies</span>
           </div>
           <div class="stat">
             <h2>314</h2>
-            <p>templates</p>
+            <span>templates</span>
           </div>
           <div class="stat">
             <h2>12m+</h2>
-            <p>queries</p>
+            <span>queries</span>
           </div>
         </div>
      </div>
+      <div class="image-desktop">
        <img src="images/main-image.png" alt="image-header-desktop">
+      </div>
    </div>
 </body>
 </html>
